Frio: aside fixed on scroll, full page on mobile

--- a/view/theme/frio/css/style.css
+++ b/view/theme/frio/css/style.css
@@ -3,7 +3,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
-/* 
+/*
     Created on : 17.02.2016, 23:55:45
     Author     : rabuzarus
 */
@@ -73,6 +73,19 @@ iframe, img {
     display: none !important;
 }
 
+/**
+ * mobile aside
+ */
+@media screen and (max-width: 990px) {
+	aside{
+		position: fixed!important;
+		background-color: #fff;
+		width: 100%;
+		height: 100%;
+		padding-top: 100px;
+		z-index: 10;
+	}
+}
 /*
 * standard page elements
 */
@@ -171,7 +184,7 @@ a#item-delete-selected {
     background: $btn_primary_hover_color;
     border-color: none;
 }
-	
+
 .btn-link {
 /*    color: #6fdbe8;*/
     color: $link_color;
@@ -284,7 +297,7 @@ header #banner {
     whitespace: nowrap;
     padding-left: 55px;
 }
-header #banner #logo-img, 
+header #banner #logo-img,
 .navbar-brand #logo-img {
     /*mask: url('network#m1');*/
     /*mask-image: url('img/friendica-25.png');*/
@@ -416,7 +429,7 @@ nav.navbar .nav>li>a:focus{
     top: 4px;
     right: -2px;
     background-color: #ff8989;
-    
+
 /*    text-transform: uppercase;
     display: inline-block;
     padding: 3px 5px 4px;
@@ -1086,7 +1099,7 @@ aside #group-sidebar li .group-edit-tool:first-child {
     width: 90px;*/
 }
 #contact-block contact-block-link {
-    
+
 }
 #contact-block .contact-block-img {
     height: 75px;
@@ -1641,7 +1654,7 @@ img.acpopup-img {
 .wall-item-container.thread_level_6,
 .wall-item-container.thread_level_7 {
   margin-left: 15px;
-  
+
 }
 /* Menubar Tabs */
 #tabmenu,
@@ -1674,7 +1687,7 @@ ul.tabs li {
     transition: all .15s ease;
 }
 /*ul.tabs.visible-xs > li.active {
-    min-width: 150px;  This is a workaround to make the topbar-second dropdown better visible on mobile. We need something better here 
+    min-width: 150px;  This is a workaround to make the topbar-second dropdown better visible on mobile. We need something better here
 }*/
 ul.tabs li a {
     margin-left: 10px;
@@ -1888,7 +1901,7 @@ ul.viewcontact_wrapper > li {
 }
 .contact-wrapper .contact-photo-image-wrapper img.contact-photo.xl {
     height: 80px;
-    width: 80px;    
+    width: 80px;
 }
 .contact-wrapper .contact-photo-image-wrapper img.contact-photo-xs {
     height: 48px;
@@ -1905,7 +1918,7 @@ ul.viewcontact_wrapper > li {
     margin-top: -20px;
 }
 .contact-wrapper .media-body .contact-entry-name h4.media-heading a {
-    font-weight: bold !important; 
+    font-weight: bold !important;
     color: $link_color;
     font-size: 15px !important;
 }
@@ -2265,7 +2278,7 @@ ul.notif-network-list > li:hover .intro-action-buttons {
 
 /* Search Page */
 
-/* This is a little bit hacky. Since the search page is used for diferent 
+/* This is a little bit hacky. Since the search page is used for diferent
 content types we can't apply the generic-page-wrapper class.
 So we apply the css of the generic-page-wrapper class to the ul element with some
 little modifications to emulate a standard page template */
@@ -2374,7 +2387,7 @@ main .nav-tabs>li.active>a:hover {
 #contact-list ul.dropdown-menu.textcomplete-dropdown.media-list > li:first-child {
     display: none;
 }
-#contact-list ul.dropdown-menu.textcomplete-dropdown.media-list 
+#contact-list ul.dropdown-menu.textcomplete-dropdown.media-list
 .textcomplete-item > a {
     padding: 0 !important;
     border-left: none;
